fixed background not entirely covering page on small screens

--- a/client/src/css/components/authForm.css
+++ b/client/src/css/components/authForm.css
@@ -113,6 +113,7 @@ label {
 
 .panels {
   width: 100vw;
+  min-width: var(--min-width);
 }
 
 .d-flex {
