--- a/client/src/css/components/loading.css
+++ b/client/src/css/components/loading.css
@@ -13,6 +13,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: var(--min-width);
   background-color: rgba(255, 255, 255, 0.575);
 }
 
