--- a/client/src/css/var.css
+++ b/client/src/css/var.css
@@ -1,5 +1,5 @@
 :root {
-  --min-width: 350px;
+  --min-width: 1950px;
   --nav-bar-height: 55px;
 }
 
